2008-01-11  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * common/gvfsdaemonprotocol.h:
	Implement unmount_mountable and eject_mountable
	on client side.
	
        * common/gmountoperationdbus.c:
	Fix warnings
	
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsjobunmountmountable.[ch]:
	Add unmount_mountable and eject_mountable in daemon.
	
        * daemon/gvfsbackendcomputer.c:
	Implement unmount_mountable and eject_mountable

        * daemon/gvfsbackendlocaltest.c:
	Update to latest API
	
        * daemon/gvfsbackendsftp.c:
	Fix indentation
	
        * daemon/gvfsjobunmount.c:
	Always allow unmount if unmount is not
	implemented.

2008-01-11  Christian Kellner  <gicmo@gnome.org>

	* configure.ac:
	* daemon/Makefile.am:
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	Initial attempt of writing the http backend. Not much
	there yet only a stub.

2008-01-10  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackend.h:
        * daemon/gvfsmonitor.[ch]:
        * daemon/gvfsbackendcomputer.c:
        * daemon/gvfsbackendtrash.c:
	Make GVfsMonitor API simpler for users.

2008-01-10  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsmonitor.c:
	Remove freeing of initial ref after delay.

        * daemon/gvfsjobcreatemonitor.[ch]:
	Set the monitor as result here, not only the obj path.
	Nicer and allows better lifetime handling.
	If returning a obj ref, keep the monitor alive for
	some time to allow a subscribe request.
	
        * daemon/gvfsbackendcomputer.c:
        * daemon/gvfsbackendtrash.c:
	Update to the new APIs

2008-01-10  Alexander Larsson  <alexl@redhat.com>

        * common/gmounttracker.c:
	Handle error reply from list_mounts.

        * programs/gvfs-mount.c:
	Add option to list mounts.
	Based on patch from nf2@scheinwelt.at

2008-01-09  Alexander Larsson  <alexl@redhat.com>

        * hal/ghaldrive.c:
        * hal/ghalmount.c:
        * hal/ghalvolume.c: